[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/player_idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/Parallax_backgroupd.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12.6128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.125, 0.072937 )

[node name="player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.832177, 0.587889 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.588237 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1.65, 0.8 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 18.193 )
shape = SubResource( 2 )

[node name="exit_notifier" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.5, 3.5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_exited" from="exit_notifier" to="." method="_on_exit_notifier_screen_exited"]
